<resources>
    <string name="app_name">Food Delivery App</string>
    <string name="usernameTextView">Username</string>
    <string name="passwordTextView">Password</string>
    <string name="loginButton">Login</string>
    <string name="missingUsername">This username doesn\'t exist</string>
    <string name="incorrectPassword">The password entered is incorrect</string>
    <string name="firstNameTextView">First Name</string>
    <string name="lastNameTextView">Last Name</string>
    <string name="emailTextView">E-mail\nAddress</string>
    <string name="contactTextView">Contact (+91)</string>
    <string name="hallTextView">Hall</string>
    <string name="sign_up_button">Sign Up!</string>
    <string name="nextButton">Next</string>
    <string name="CostTextView">Total Cost</string>
    <string name="placeOrderText">Place order</string>
    <string name="DialogTitle">Caution!</string>
    <string name="DialogContent">Looks like you\'re adding items from a different Night Canteen! Doing so will clear the cart of items of
        the current Night Canteen. Do you still want to proceed?</string>
    <string name="dialog_positive_button">Okay</string>
    <string name="dialog_negative_button">Cancel</string>
    <string name="account_username">Username :</string>
    <string name="past_order">Past orders</string>
    <string name="total_text_view">Total :</string>
    <string name="heading_edit_account">Edit Account</string>
    <string name ="save_button">Save Changes</string>
    <string name ="cancel_button">Cancel</string>
    <string name="confirm_changes">Do you confirm the changes?</string>
    <string name="confirm_title">Confirmation</string>
    <string name="empty_error">Fill in all the fields!</string>
    <string name="logout">Logout</string>
    <string name="login">Login!</string>
    <string name="main_title">IIT Kharagpur\'s Night Canteen Delivery App</string>
    <string-array name="halls_array">
        <item>RP</item>
        <item>RK</item>
        <item>SNIG</item>
        <item>MS</item>
        <item>VS</item>
        <item>LLR</item>
        <item>MMM</item>
        <item>Azad</item>
        <item>Nehru</item>
        <item>Patel</item>
        <item>SNVH</item>
        <item>MT</item>
        <item>SAM</item>
        <item>HJB</item>
    </string-array>
    <string-array name="canteens_array">
        <item>RP</item>
        <item>RK</item>
        <item>MS</item>
        <item>VS</item>
        <item>LLR</item>
        <item>MMM</item>
        <item>Azad</item>
        <item>Nehru</item>
        <item>Patel</item>
        <item>MT</item>
        <item>HJB</item>
    </string-array>
    <string name="back_button">Back</string>
    <string name="done_button">Done</string>
    <string name="cart_empty_textView">Your Cart is Empty!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
