<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainDetailsFragment">

    <TextView
        android:id="@+id/firstNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/hammersmith_one"
        android:textColor="#000000"
        android:text="@string/firstNameTextView"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.146" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emailTextView"
        android:textSize="20sp"
        android:fontFamily="@font/hammersmith_one"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/lastNameTextView"
        app:layout_constraintTop_toBottomOf="@+id/lastNameTextView"
        app:layout_constraintVertical_bias="0.113" />

    <TextView
        android:id="@+id/lastNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lastNameTextView"
        android:textSize="20sp"
        android:fontFamily="@font/hammersmith_one"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/firstNameTextView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.251" />

    <EditText
        android:id="@+id/firstNameEditText"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:fontFamily="@font/hammersmith_one"
        android:backgroundTint="@color/black"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/firstNameTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toEndOf="@+id/firstNameTextView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/lastNameEditText"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:fontFamily="@font/hammersmith_one"
        android:backgroundTint="@color/black"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/lastNameTextView"
        app:layout_constraintEnd_toEndOf="@+id/firstNameEditText"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/lastNameTextView"
        app:layout_constraintTop_toBottomOf="@+id/firstNameEditText"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/hammersmith_one"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/emailTextView"
        app:layout_constraintEnd_toEndOf="@+id/lastNameEditText"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastNameEditText"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/contactEditText"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/hammersmith_one"
        android:backgroundTint="@color/black"
        android:textColor="#000000"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/contactTextView"
        app:layout_constraintEnd_toEndOf="@+id/emailEditText"
        app:layout_constraintHorizontal_bias="0.648"
        app:layout_constraintStart_toEndOf="@+id/contactTextView"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/contactTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contactTextView"
        android:fontFamily="@font/hammersmith_one"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/emailTextView"
        app:layout_constraintTop_toBottomOf="@+id/emailTextView"
        app:layout_constraintVertical_bias="0.097" />

    <Spinner
        android:id="@+id/hall_spinner"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/hammersmith_one"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/hallTextView"
        app:layout_constraintEnd_toEndOf="@+id/contactEditText"
        app:layout_constraintHorizontal_bias="0.185"
        app:layout_constraintStart_toEndOf="@+id/hallTextView"
        app:layout_constraintTop_toBottomOf="@+id/contactEditText"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/hallTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/hallTextView"
        android:fontFamily="@font/hammersmith_one"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/contactTextView"
        app:layout_constraintTop_toBottomOf="@+id/contactTextView" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fontFamily="@font/hammersmith_one"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.269"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hall_spinner"
        app:layout_constraintVertical_bias="0.502" />

    <Button
        android:id="@+id/doneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done_button"
        app:layout_constraintBottom_toBottomOf="@+id/backButton"
        android:fontFamily="@font/hammersmith_one"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.371"
        app:layout_constraintStart_toEndOf="@+id/backButton"
        app:layout_constraintTop_toTopOf="@+id/backButton"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/empty_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/hammersmith_one"
        android:text="@string/empty_error"
        android:textColor="#D53B3B"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hall_spinner" />

</androidx.constraintlayout.widget.ConstraintLayout>