<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id= "@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.signUpDetails">

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:fontFamily="@font/hammersmith_one"
        android:backgroundTint="@color/black"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/fragmentUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.713"
        app:layout_constraintStart_toEndOf="@+id/fragmentUsername"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:fontFamily="@font/hammersmith_one"
        android:backgroundTint="@color/black"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/fragmentPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/usernameEditText"
        app:layout_constraintTop_toBottomOf="@+id/usernameEditText"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/fragmentPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passwordTextView"
        android:textSize="20sp"
        android:fontFamily="@font/hammersmith_one"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.423" />

    <TextView
        android:id="@+id/fragmentUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usernameTextView"
        android:textSize="20sp"
        android:fontFamily="@font/hammersmith_one"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.281" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nextButton"
        android:fontFamily="@font/hammersmith_one"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
        app:layout_constraintVertical_bias="0.195" />
</androidx.constraintlayout.widget.ConstraintLayout>